fix 刪除 project/settings.py 註解的 code，修改 .env.sample channel.redis 環境變數項目

--- a/.env.sample
+++ b/.env.sample
@@ -32,4 +32,5 @@ CLIENT_ID=
 CLIENT_SECRET=
 
 # channel.redis 需要的url
-CHANNEL_LAYERS_HOST=
+CHANNEL_LAYERS_URL="127.0.0.1"
+CHANNEL_LAYERS_PORT=6379
