fix .env.sample channel.redis 環境變數的值

--- a/.env.sample
+++ b/.env.sample
@@ -31,6 +31,6 @@ DEFAULT_FROM_EMAIL=EMAIL_HOST_USER
 CLIENT_ID=
 CLIENT_SECRET=
 
-# channel.redis 需要的url
-CHANNEL_LAYERS_URL="127.0.0.1"
-CHANNEL_LAYERS_PORT=6379
+# channel.redis 需要的url 
+CHANNEL_LAYERS_URL=
+CHANNEL_LAYERS_PORT=
